--- a/all.css
+++ b/all.css
@@ -1,5 +1,5 @@
 body{
- background-color:DarkSlateGray; 
+ background-color:DarkSlateGray;
  text-align:center;
 }
 button {
@@ -10,3 +10,42 @@ button {
     cursor: pointer;
     display: inline-block;
 }
+
+* {box-sizing: border-box}
+/* Set height of body and the document to 100% */
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Advent Pro;
+}
+
+/* Style top tab links */
+.tablink {
+    background-color: #555;
+    color: white;/*font color*/
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 17px;
+    width: 25%;
+}
+
+.tablink:hover {
+    background-color: #777;
+}
+
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+    color: white; /*font color for each page*/
+    display: none;
+    padding: 100px 20px;
+    height: 100%;
+}
+
+
+#All {background-color: tomato;}
+#Quiz {background-color: green;}
+#Ingredients {background-color: steelblue;}
+#Lessons {background-color: orange;}
