--- a/all.css
+++ b/all.css
@@ -1,11 +1,14 @@
 body{
  background-color:DarkSlateGray;
  text-align:center;
+ padding: 14px 20px;
+ font-size: 16px;
 }
+
 button {
     border: none;
     background-color:LightYellow;
-    padding: 14px 28px;
+    padding: 14px 20px;
     font-size: 16px;
     cursor: pointer;
     display: inline-block;
@@ -29,7 +32,7 @@ body, html {
     cursor: pointer;
     padding: 14px 16px;
     font-size: 17px;
-    width: 20%;
+    width: 10%;
 }
 
 .tablink:hover {
@@ -40,7 +43,7 @@ body, html {
 .tabcontent {
     color: black; /*font color for each page*/
     display: none;
-    padding: 100px 20px;
+    padding: 50px 20px;
     height: 100%;
 }
 
@@ -49,38 +52,5 @@ body, html {
 #Quiz {background-color: green;}
 #Ingredients {background-color: steelblue;}
 #Lessons {background-color: #FFB6C1;}
+#Animations {background-color:purple;}
 #Contribute {background-color: orange;}
-
-/* Style inputs with type="text", select elements and textareas */
-input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */
-    border: 1px solid #ccd; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
-}
-
-/* Style the submit button with a specific background color etc */
-input[type=submit] {
-    background-color: orange;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-/* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
-    background-color: brown;
-}
-
-/* Add a background color and some padding around the form */
-.container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-}
