--- a/recipes.css
+++ b/recipes.css
@@ -12,8 +12,8 @@ body {
   float: left;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
-  width: 100%;
-  height: 100%;
+  width: 30%;
+  height: 500px;
 }
 /* Style the buttons that are used to open the tab content */
 .tab button {
