--- a/all.css
+++ b/all.css
@@ -32,7 +32,7 @@ html {
   cursor: pointer;
   padding: 14px 16px;
   font-size: 17px;
-  width: 20%;
+  width: 12.5%;
 }
 
 .tablink:hover {
@@ -59,8 +59,14 @@ html {
 #Lessons {
   background-color: #ffb6c1;
 }
+#Animations {
+  background-color: purple;
+}
 #Contribute {
   background-color: orange;
+}
+#AboutUs {
+  background-color: chartreuse;
 }
 
 /* Style inputs with type="text", select elements and textareas */
